--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ footer-links:
   flickr:
   github: amitmerchant1990/reverie
   instagram:
-  linkedin: 
+  linkedin:
   pinterest:
   rss: rss
   twitter: amit_merchant
-  stackoverflow: 
+  stackoverflow:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
@@ -38,7 +38,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: 
+disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-43339302-11
@@ -55,7 +55,7 @@ enforce_ssl: https://www.amitmerchant.com/reverie
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: "/reverie-light"
 
 #
 # !! You don't need to change any of the configuration flags below !!
