--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Bart Roossien
 description: Bart Roossien
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/avatar.jpg
 
 #
 # Flags below are optional
